impl/tests/errors/__snapshots__/test_enum_redefinition.ambr
# serializer version: 1
# name: test_enum_redefinition_output
  '''
  
  [31m[E12] Error:[0m Type [38;5;201mLang[0m is redefined
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:1:6[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m1 │[0m [38;5;249me[0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249m [0m[38;5;201mL[0m[38;5;201ma[0m[38;5;201mn[0m[38;5;201mg[0m[38;5;249m [0m[38;5;249m{[0m
   [38;5;240m  │[0m      [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
   [38;5;240m  │[0m        [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m Type is defined first here...
   [38;5;240m  │[0m        [38;5;201m│[0m   
   [38;5;240m  │[0m        [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m ...and redefined here
  [38;5;246m───╯[0m
  
  
  '''
# ---
